tests for field parsers