@@ -6,7 +6,6 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -14,18 +13,17 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-class MinuteParserTest {
-
-    private final CronFieldParser cronFieldParser = new MinuteParser();
+class HourParserTest {
+    private final CronFieldParser cronFieldParser = new HourParser();
 
     static Stream<Arguments> validDataProvider() {
         return Stream.of(
-            arguments("*", IntStream.rangeClosed(0, 59).boxed().toList()),
-            arguments("*/1", IntStream.rangeClosed(0, 59).boxed().toList()),
-            arguments("*/15", Arrays.asList(0, 15, 30, 45)),
-            arguments("1,15", Arrays.asList(1, 15)),
-            arguments("5-10", Arrays.asList(5, 6, 7, 8, 9, 10)),
-            arguments("45", List.of(45))
+                arguments("*", IntStream.rangeClosed(0, 23).boxed().toList()),
+                arguments("*/1", IntStream.rangeClosed(0, 23).boxed().toList()),
+                arguments("*/3", Arrays.asList(0, 3, 6, 9, 12, 15, 18, 21)),
+                arguments("1,5,9", Arrays.asList(1, 5, 9)),
+                arguments("5-10", Arrays.asList(5, 6, 7, 8, 9, 10)),
+                arguments("22", List.of(22))
         );
     }
     @ParameterizedTest
@@ -37,10 +35,10 @@ class MinuteParserTest {
     static Stream<Arguments> invalidDataProvider() {
         return Stream.of(
                 arguments("**"),
-                arguments("*/75"),
-                arguments("1,70"),
+                arguments("*/24"),
+                arguments("1,20,24"),
                 arguments("5-10-15"),
-                arguments("60"),
+                arguments("066"),
                 arguments("-1"),
                 arguments("\\"),
                 arguments("_1")
