@@ -6,7 +6,6 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -14,18 +13,18 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-class MinuteParserTest {
+class MonthParserTest {
 
-    private final CronFieldParser cronFieldParser = new MinuteParser();
+    private final CronFieldParser cronFieldParser = new MonthParser();
 
     static Stream<Arguments> validDataProvider() {
         return Stream.of(
-            arguments("*", IntStream.rangeClosed(0, 59).boxed().toList()),
-            arguments("*/1", IntStream.rangeClosed(0, 59).boxed().toList()),
-            arguments("*/15", Arrays.asList(0, 15, 30, 45)),
-            arguments("1,15", Arrays.asList(1, 15)),
-            arguments("5-10", Arrays.asList(5, 6, 7, 8, 9, 10)),
-            arguments("45", List.of(45))
+                arguments("*", IntStream.rangeClosed(1, 12).boxed().toList()),
+                arguments("*/1", IntStream.rangeClosed(1, 12).boxed().toList()),
+                arguments("*/3", Arrays.asList(1, 4, 7, 10)),
+                arguments("1,5,9", Arrays.asList(1, 5, 9)),
+                arguments("5-10", Arrays.asList(5, 6, 7, 8, 9, 10)),
+                arguments("4", List.of(4))
         );
     }
     @ParameterizedTest
@@ -37,8 +36,8 @@ class MinuteParserTest {
     static Stream<Arguments> invalidDataProvider() {
         return Stream.of(
                 arguments("**"),
-                arguments("*/75"),
-                arguments("1,70"),
+                arguments("*/13"),
+                arguments("1,20"),
                 arguments("5-10-15"),
                 arguments("60"),
                 arguments("-1"),
